objects/BBB_Month_Bill_Book_Cust_PN__c.object
<CustomObject>
    <description>Monthly bookings and billings by customer (Account) and part for CSD, includes direct only</description>
    <fields>
        <fullName>BBB_Monthly_Part_External_Key__c</fullName>
        <externalId>true</externalId>
        <label>BBB Monthly Part External Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_Document__c</fullName>
        <label>Bill Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_Minus_Cost_Document__c</fullName>
        <label>Bill Amount Minus Cost - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_Minus_Cost_USD__c</fullName>
        <label>Bill Amount Minus Cost - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Amount_USD__c</fullName>
        <label>Bill Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Quantity__c</fullName>
        <label>Bill Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Amount_Document__c</fullName>
        <label>Book Amount - Document</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Amount_USD__c</fullName>
        <label>Book Amount - USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book_Quantity__c</fullName>
        <label>Book Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Monthly_Billings_by_Part</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Fiscal_Date__c</fullName>
        <formula>DATE( VALUE(Fiscal_Year__c), Fiscal_Month__c, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <description>Combine Fiscal Year and Fiscal Month</description>
        <formula>if (Fiscal_Month__c &lt; 9, Fiscal_Year__c &amp;&quot;/0&quot;&amp;TEXT( Fiscal_Month__c ),Fiscal_Year__c &amp;&quot;/&quot;&amp;TEXT( Fiscal_Month__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <formula>CASE(Fiscal_Month__c, 
1,&quot;1&quot;,
2,&quot;1&quot;,
3,&quot;1&quot;,
4,&quot;2&quot;,
5,&quot;2&quot;,
6,&quot;2&quot;,
7,&quot;3&quot;,
8,&quot;3&quot;,
9,&quot;3&quot;,
10,&quot;4&quot;,
11,&quot;4&quot;,
12,&quot;4&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Load Status</label>
        <referenceTo>Load_Status__c</referenceTo>
        <relationshipLabel>Monthly Billings/Bookings by Part</relationshipLabel>
        <relationshipName>Monthly_Billings_Bookings_by_Part</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Obsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to mark a record to be deleted. Any record marked true should not be used anywhere</description>
        <inlineHelpText>If checked the record will be deleted from the system</inlineHelpText>
        <label>Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipName>Monthly_Billings_by_Part</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Group_Code__c</fullName>
        <label>Profit Center Group Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Group_Name__c</fullName>
        <label>Profit Center Group Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <label>Profit Center</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Code_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP Profit Center Code Filter</label>
        <referenceTo>Cross_Dashboard_Filter__c</referenceTo>
        <relationshipName>Monthly_Billings_by_Part</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Code__c</fullName>
        <label>SAP Profit Center Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Profit_Center_Name__c</fullName>
        <label>SAP Profit Center Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWCORPACCT__c</fullName>
        <formula>Value(Customer__r.WWCORPACCT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Worldwide Account Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Monthly Billings/Bookings by Part</label>
    <listViews>
        <fullName>Jan_View</fullName>
        <columns>Fiscal_Year__c</columns>
        <columns>Fiscal_Month__c</columns>
        <columns>Customer__c</columns>
        <columns>Part__c</columns>
        <columns>Bill_Amount_USD__c</columns>
        <columns>Book_Amount_USD__c</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Month__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <filters>
            <field>Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <filters>
            <field>Profit_Center__c</field>
            <operation>equals</operation>
            <value>DND</value>
        </filters>
        <label>oem View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MBBP-{0}</displayFormat>
        <label>Monthly Billing by Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Billings/Bookings by Part</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>